log
Mon 25 Mar 2024 09:50:20 PM UTC: 
 tests:  0|6
total_score: 0/70
2ff5871
Mon 25 Mar 2024 10:24:54 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   35 |   list->size = 0;
      |       ^~
Compilation failed
eeb0b88
Mon 25 Mar 2024 10:27:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:6: error: expected identifier or ‘(’ before ‘->’ token
   35 |   int->size = 0;
      |      ^~
Compilation failed
072aa6e
Mon 25 Mar 2024 10:27:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:7: error: unused variable ‘size’ [-Werror=unused-variable]
   35 |   int size = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
98a78b8
Mon 25 Mar 2024 10:28:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9f4df21
Mon 25 Mar 2024 10:35:17 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6ddab95
Mon 25 Mar 2024 10:35:40 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b32ab61
Mon 25 Mar 2024 10:36:13 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a4a42b
